Refactors :electric_plug:
Minor refactors from last nights testing and added a README file.

--- a/public/index.html
+++ b/public/index.html
@@ -56,13 +56,7 @@
     <div class="aux-wrapper">
         <div class="aux">
             <div class="row">
-                <div class="col-extra-small-6">
-                    <div class="select">
-                        <button id="horn" class="horn">Horn</button>
-                    </div>
-                </div>
-
-                <div class="col-extra-small-6">
+                <div class="col-extra-small-12">
                     <form class="speed">
                         <label>
                             <h2>Speed</h2>
@@ -75,7 +69,7 @@
             <div class="row">
                 <div class="col-extra-small-12">
                     <p class="credits">
-                        Created by James Ives and Amelia Dolby for Node Bots day 2017. View the code <a href="#">here</a>.
+                        View the code <a href="#">here</a>.
                     </p>
                 </div>
             </div>
