--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="author" content="James Ives">
-    <meta name="description" content="Montezooma Tesla 2 Racer Bot">
-    <meta name="keywords" content="keywords,here">
+    <meta name="author" content="James Ives and Amelia Dolby">
+    <meta name="description" content="Montezooma Tessel 2 Racer Bot">
+    <meta name="keywords" content="montezooma, racer, bot, tessel 2, racer, bot, nodebot">
     <link rel="stylesheet" href="/static/css/style.css" type="text/css">
     <link rel="icon" type="image/png" href="/static/assets/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/static/assets/favicon-16x16.png" sizes="16x16" />
-    <title>Montezooma Racer</title>
+    <title>Montezooma Nodebot Racer</title>
   </head>
   <body>
 
